I hope this doesn't break
changed main to src
and imported some things to game list